--- a/第4章 变量、作用域与内存/4.1 原始值与引用值.md
+++ b/第4章 变量、作用域与内存/4.1 原始值与引用值.md
@@ -16,3 +16,72 @@ value）访问的，我们操作的就是存储在变量中的实际值。
 
 原始值和引用值定的定义方式很类似，都是创建一个变量，然后赋给它一个值。不过，在变量保存了这个值之后，可以对这个值做什么，则大有不同。对于引用值而言，可以随时添加、修改和删除其属性和方法。而原始值不能有属性，尽管尝试给原始值添加属性不会报错。
 
+### 4.1.2 复制值
+
+除了存储方式不同，原始值和引用值在通过变量复制时也有所不同。
+
+在通过一个变量把一个原始值赋值到另一个变量时，原始值会被复制到新变量的位置。
+
+在把引用值从一个变量赋给另一个变量时，存储在变量中的值也会被复制到新变量所在的位置。区别在于，这里复制的值实际上是一个指针，它指向存储在堆内存中的对象。操作完成后，两个变量实际上指向同一个对象，因此一个对象上面的变化会在另一个对象上反应出来。
+
+### 4.1.3 传递参数
+
+ECMAScript中所有函数的参数都是按值传递的。这意味着函数外的值会被复制到函数内部的参数中，就像从一个变量复制到另一个变量一样。如果是原始值，那么久跟原始值变量的复制一样，如果是引用值，那么就跟引用值的复制一样。对很多开发者来说，这一块可能会不好理解，毕竟变量有按值和按引用访问，参数则只有按值传递。
+
+在按值传递参数时，值会被复制到一个局部变量（即一个命名参数，或者用ECMAScript的话说，就是arguments对象中的一个槽位）。在按引用传递参数时，值在内存中的位置会被保存在一个局部变量，这意味着对本地变量的修改会反应到函数外部。（这在ECMAScript中是不可能的。）看下面这个例子：
+
+```javascript
+function addTen(num) {
+	num += 10;
+	return num;
+}
+
+let count = 20;
+let result = addTen(count);
+
+console.log(result); // 30
+console.log(count); // 20，没有变化
+```
+
+这里，函数addTen()有一个参数num，它其实是一个局部变量。在调用时，变量count作为参数传入。count的值是20，这个值被复制到参数num以便在addTen()
+函数内部使用。在函数内部，参数num的值被加了10，但这不会影响函数外部的原始变量count。参数num和变量count互不干扰，它们只不过碰巧保存了一样的值。如果num是按引用传递的，那么count的值也会被修改为30。这个事实在使用数值这样的原始值时是非常明显的。但是如果变量中传递的是对象，就没那么清楚了。比如，再看下面这个例子：
+
+```javascript
+function setName(obj) {
+	obj.name = "Nicholas";
+}
+
+let person = new Object();
+setName(person);
+console.log(person.name); // "Nicholas"
+```
+
+这一次，我们创建了一个对象并把它保存在变量person中。然后，这个对象被传给setName()
+方法，并被复制到参数obj中。在函数内部，obj和person都指向同一个对象。结果就是，即使对象是按值传递进去的，obj也会通过引用访问对象。当函数内部给obj设置了name属性时，函数外部的对象也会反映这个变化，因为obj指向的对象保存在全局作用域的堆内存上。很多开发者错误的认为，当在局部作用域中修改对象而变化反映到全局时，就意味着参数是按引用传递的。为证明对象是按值传递的，我们再来看看下面这个修改后的例子：
+
+```javascript
+function setName(obj) {
+	obj.name = "Nicholas";
+	obj = new Object();
+	obj.name = "Greg";
+}
+
+let person = new Object();
+setName(person);
+console.log(person.name); // "Nicholas"
+```
+
+这个例子前后唯一的变化就是setName()中多了两行代码，将obj重新定义为一个有着不同name的新对象。当person传入setName()时，起name属性被设置为"Nicholas"
+。然后变量obj被设置为一个新对象且name属性被设置为"Greg"。如果person是按引用传递的，那么person应该自动将指针改为指向name为"Greg"的对象。可是，当我们再次访问person的name属性时，它的值为"
+Nicholas"，这表明函数中参数的值改变之后，原始的引用仍然没变。当obj在函数内部被重写时，它变成了一个指向本地对象的指针。而那个本地对象在函数执行结束时就被销毁了。
+
+> **注意**&nbsp;&nbsp;&nbsp;&nbsp;ECMAScript中函数的参数就是局部变量。
+
+### 4.1.4 确定类型
+
+typeof操作符最适合用来判断一个变量是否为原始类型。更确切地说，它是判断一个变量是否为字符串、数值、布尔值或undefined的最好方式。如果值是对象或者null，那么typeof返回"object"
+，typeof虽然对原始值很有用，但它对引用值的用处不大。我们通常不关心一个值是不是对象，而是想要知道它是什么类型的对象。为了解决这个问题，ECMAScript提供了instanceof操作符，语法如下：
+
+```javascript
+result = variable instanceof constructor
+```
